squid (2.6.4-1wm4) unstable; urgency=low
  * Fix bug in initscript COSS preparation



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16931 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/squid.rc
+++ b/debs/squid/debian/squid.rc
@@ -64,7 +64,7 @@ maxfds () {
 prepare_coss() {
 	COSS_FILES=`sed -e 's/#.*//g' /etc/squid/squid.conf | \
 	        egrep "cache_dir[[:space:]]+coss" | awk '{ print $3 }'`
-	for cossfile in "$COSS_FILES"
+	for cossfile in $COSS_FILES
 	do
 		log_warning_msg "Preparing COSS file $cossfile..."
 		cosssize=`sed -e 's/#.*//g' /etc/squid/squid.conf | \
