wikimedia-base (0.02) unstable; urgency=low
  * Set up APT package pinning for Wikimedia packages in /etc/apt/preferences
  * No longer depend on package mcelog, as it doesn't install on i386
  * Depend on screen
  * Optimize TCP sysctl settings



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16937 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/rules
+++ b/debs/wikimedia-base/debian/rules
@@ -57,7 +57,9 @@ install: build
 
 	# Add here commands to install the package into debian/wikimedia-base.
 	#$(MAKE) install DESTDIR=$(CURDIR)/debian/wikimedia-base
-
+	install -d $(CURDIR)/debian/wikimedia-base/usr/share/doc/wikimedia-base
+	install -m 0644 debian/apt_preferences $(CURDIR)/debian/wikimedia-base/usr/share/doc/wikimedia-base/apt_preferences
+	install -m 0644 debian/sysctl.conf $(CURDIR)/debian/wikimedia-base/usr/share/doc/wikimedia-base/sysctl.conf
 
 # Build architecture-independent files here.
 binary-indep: build install
