* Add the Wikimedia archive keyring, and autoinstall it  * Add a symlink i686.cfg -> i386.cfg
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16942 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -21,7 +21,7 @@ d-i	pkgsel/install-language-support	bool	false
 d-i	apt-setup/local0/comment	string	Wikimedia APT repository
 d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main contrib non-free
 d-i	apt-setup/local0/source		boolean	true
-#d-i	apt-setup/local0/key		string	http://local.server/key
+d-i	apt-setup/local0/key		string	http://apt.wikimedia.org/autoinstall/keyring/wikimedia-archive-keyring.gpg
 
 # Architecture specific settings (kernels etc)
 d-i     preseed/include_command string  echo $(uname -m).cfg
