wikimedia-base (0.03) dapper; urgency=low
  * Do not remove sysctl.conf settings on package upgrade,
    as the user may have altered them
  * Depend on mcelog, but only for arch amd64



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16968 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/control
+++ b/debs/wikimedia-base/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.6.2
 Package: wikimedia-base
 Architecture: all
 Origin: Wikimedia
-Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, ntp-simple, zsh, joe, screen, smartmontools
+Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, ntp-simple, zsh, joe, screen, smartmontools, mcelog [amd64]
 Description: Base requirements for any Wikimedia server
  wikimedia-base provides the Wikimedia specific base requirements
  for any Wikimedia server. Currently that involves:
