--- a/debs/wikimedia-base/debian/sysctl.conf
+++ b/debs/wikimedia-base/debian/sysctl.conf
@@ -1,4 +1,3 @@
-
 ### START: Added by wikimedia-base
 
 # increase TCP max buffer size
@@ -14,4 +13,7 @@ net.ipv4.tcp_no_metrics_save = 1
 # recommended to increase this for 1000 BT or higher
 net.core.netdev_max_backlog = 2500
 
+# Increase the queue size of new TCP connections
+net.core.somaxconn = 1024
+net.ipv4.tcp_max_syn_backlog = 4192
 ### END: Added by wikimedia-base
