* Use apt.wikimedia.org as Ubuntu mirror in pmtpa  * Try an alternative partitioning scheme using not-used swap partitions    for Squids.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16969 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/pmtpa.cfg
+++ b/ubuntu/autoinstall/pmtpa.cfg
@@ -16,11 +16,8 @@ d-i    netcfg/confirm_static   boolean true
 d-i	netcfg/wireless_wep	string 
 
 d-i	mirror/country		string enter information manually
-#d-i	mirror/http/hostname	string us.archive.ubuntu.com
-#d-i	mirror/http/hostname	string ftp.ussg.iu.edu
-d-i	mirror/http/hostname	string ftp.osuosl.org
-d-i	mirror/http/directory	string /pub/ubuntu/
-#d-i	mirror/http/directory	string /ubuntu/
+d-i	mirror/http/hostname	string apt.wikimedia.org
+d-i	mirror/http/directory	string /ubuntu/
 d-i	mirror/http/proxy	string
 
 # Suite to install.
