--- a/ubuntu/autoinstall/squid.cfg
+++ b/ubuntu/autoinstall/squid.cfg
@@ -19,7 +19,7 @@ d-i	partman/confirm	boolean	true
 d-i	partman-basicmethods/method_only	boolean	false
 
 # Note, expert_recipe wants to fill up the entire disk
-d-i	partman-auto/expert_recipe	string	squid : 3000 5000 8000 ext3 $primary{ } $bootable{ } method{ format } format{ } use_filesystem{ } filesystem{ ext3 } mountpoint{ / } . 1000 1500 120% linux-swap method{ swap } format{ } . 8000 10000 12000 reiserfs method{ format } format{ } use_filesystem{ } filesystem{ reiserfs } mountpoint{ /a } . 64 1000 10000000 ext3 method{ keep } format{ } .
+d-i	partman-auto/expert_recipe	string	squid : 3000 5000 8000 ext3 $primary{ } $bootable{ } method{ format } format{ } use_filesystem{ } filesystem{ ext3 } mountpoint{ / } . 1000 1500 120% linux-swap method{ swap } format{ } . 64 1000 10000000 linux-swap method{ keep } format{ } .
 d-i	partman-auto/choose_recipe	squid
 
 # Preseed squid:
