--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -19,7 +19,7 @@ d-i	pkgsel/install-language-support	bool	false
 
 # Wikimedia's APT repository
 d-i	apt-setup/local0/comment	string	Wikimedia APT repository
-d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main contrib non-free
+d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main restricted universe multiverse
 d-i	apt-setup/local0/source		boolean	true
 d-i	apt-setup/local0/key		string	http://apt.wikimedia.org/autoinstall/keyring/wikimedia-archive-keyring.gpg
 
@@ -30,4 +30,4 @@ d-i     preseed/include_command string  echo $(uname -m).cfg
 d-i	preseed/early_command	string	echo d-i netcfg/get_ipaddress string $(ifconfig | grep "inet addr" | cut -d ' ' -f 12 | sed 's/addr://' | grep -v 127\.0\.0\.1) > /tmp/static_net.cfg && debconf-set-selections /tmp/static_net.cfg && killall.sh; netcfg; true
 
 # Individual additional packages to install
-d-i	preseed/late_command	string	apt-install openssh-server build-essential zsh sysstat bc joe ntp-simple; mkdir /target/root/.ssh && wget -O /target/root/.ssh/authorized_keys http://www.knams.wikimedia.org/autoinstall/ssh/authorized_keys && chmod go-rwx /target/root/.ssh/authorized_keys; rm -f /usr/lib/prebaseconfig.d/90console && sed -i -e "s/^#T0:/T0:/" /target/etc/inittab; chroot /target /bin/sh -c 'echo -e \\n$(cat /etc/issue.net) auto-installed on $(date). > /etc/motd'
+d-i	preseed/late_command	string	apt-install wikimedia-base; mkdir /target/root/.ssh && wget -O /target/root/.ssh/authorized_keys http://apt.wikimedia.org/autoinstall/ssh/authorized_keys && chmod go-rwx /target/root/.ssh/authorized_keys; rm -f /usr/lib/prebaseconfig.d/90console && sed -i -e "s/^#T0:/T0:/" /target/etc/inittab; chroot /target /bin/sh -c 'echo -e \\n$(cat /etc/issue.net) auto-installed on $(date). > /etc/motd'
