wikimedia-base (0.04) dapper; urgency=low
  * Architecture specific Depends don't work, only in BuildDepends.
    There are possibilities with substitute variables, but we'll
    worry about that later.



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16976 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/control
+++ b/debs/wikimedia-base/debian/control
@@ -8,10 +8,10 @@ Standards-Version: 3.6.2
 Package: wikimedia-base
 Architecture: all
 Origin: Wikimedia
-Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, ntp-simple, zsh, joe, screen, smartmontools, mcelog [amd64]
+Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, ntp-simple, zsh, joe, screen, smartmontools
 Description: Base requirements for any Wikimedia server
  wikimedia-base provides the Wikimedia specific base requirements
  for any Wikimedia server. Currently that involves:
  * Depends on several packages wanted on every server,
-   like ssh, sysstat, mcelog, zsh, joe
+   like ssh, sysstat, zsh, joe
  * Sets APT package pinning for Wikimedia packages
