squid (2.6.4-1wm5) dapper; urgency=low
  * Change the init.d script to not use the executable file on
    stops, as this doesn't work on upgrades when the executable has
    been replaced by a newer one. Verify the process name instead.
  * Do not prepare COSS files on a restart



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@16979 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/squid.rc
+++ b/debs/squid/debian/squid.rc
@@ -98,7 +98,7 @@ start () {
 	fi
 
 	# Prepare COSS files, if any
-	prepare_coss
+	[ "$RESTART" != "yes" ] && prepare_coss
 
 	if [ "$CHUID" = "" ]; then
 		CHUID=root
@@ -116,7 +116,7 @@ start () {
 
 stop () {
 	PID=`cat $PIDFILE 2>/dev/null`
-	start-stop-daemon --stop --quiet --pidfile $PIDFILE --exec $DAEMON
+	start-stop-daemon --stop --quiet --pidfile $PIDFILE --name squid
 	#
 	#	Now we have to wait until squid has _really_ stopped.
 	#
@@ -168,6 +168,7 @@ case "$1" in
 	;;
     restart)
 	log_daemon_msg "Restarting Squid HTTP proxy" "squid"
+	RESTART=yes
 	stop
 	if start ; then
 		log_end_msg $?
