Preseed ssmtp settings to get a minimal cli MTA up on each server
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17012 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/yaseo.cfg
+++ b/ubuntu/autoinstall/yaseo.cfg
@@ -27,3 +27,6 @@ d-i	apt-setup/security_host	string	security.ubuntu.com
 
 # Use software from the "universe" component?
 d-i	apt-setup/universe	boolean true
+
+# ssmtp settings
+ssmtp   ssmtp/mailhub           string  amaryllis.yaseo.wikimedia.org
