wikimedia-base (0.07) dapper; urgency=low
  * Enable smartd disk monitoring



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17018 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/control
+++ b/debs/wikimedia-base/debian/control
@@ -17,3 +17,4 @@ Description: Base requirements for any Wikimedia server
  * Finds out which Wikimedia cluster the host belongs to
  * Sets APT package pinning for Wikimedia packages
  * Sets up NTP
+ * Set up SMART disk monitoring
