wikimedia-base (0.09) dapper; urgency=low
  * Pre-Depend on ntp-server and smartmontools, as they need to be set
    up before our postinst scripts runs



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17025 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/wikimedia-base/debian/control
+++ b/debs/wikimedia-base/debian/control
@@ -8,7 +8,8 @@ Standards-Version: 3.6.2
 Package: wikimedia-base
 Architecture: all
 Origin: Wikimedia
-Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, ntp-simple, zsh, joe, screen, smartmontools, ssmtp | mail-transport-agent
+Pre-Depends: ntp-server, smartmontools
+Depends: ${shlibs:Depends}, ${misc:Depends}, openssh-server, sysstat, zsh, joe, screen, ntp-simple, ssmtp | mail-transport-agent
 Description: Base requirements for any Wikimedia server
  wikimedia-base provides the Wikimedia specific base requirements
  for any Wikimedia server. Currently that involves:
