--- a/debs/squid/debian/rules
+++ b/debs/squid/debian/rules
@@ -15,6 +15,22 @@ LC_ALL	= POSIX
 DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU 2>/dev/null)
 DEB_HOST_ARCH_OS := $(shell dpkg-architecture -qDEB_HOST_ARCH_OS 2>/dev/null)
 
+CFLAGS = -Wall -g
+INSTALL = install
+INSTALL_FILE    = $(INSTALL) -p    -o root -g root  -m  644
+INSTALL_PROGRAM = $(INSTALL) -p    -o root -g root  -m  755
+INSTALL_SCRIPT  = $(INSTALL) -p    -o root -g root  -m  755
+INSTALL_DIR     = $(INSTALL) -p -d -o root -g root  -m  755
+     
+ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+CFLAGS += -O0
+else
+CFLAGS += -O2
+endif
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+INSTALL_PROGRAM += -s
+endif
+
 # Take account of old dpkg-architecture output.
 ifeq ($(DEB_HOST_ARCH_CPU),)
   DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
@@ -57,13 +73,13 @@ ifeq ($(DEB_HOST_ARCH_OS), gnu)
 else
 ifeq ($(DEB_HOST_ARCH_OS), kfreebsd)
 	with_pthreads = --enable-async-io --with-pthreads \
-		--enable-storeio=ufs,aufs,diskd,null
+		--enable-storeio=ufs,aufs,coss,diskd,null
 	with_netfilter =
 	with_arp_acl =
 	with_epoll = --enable-kqueue
 else
 	with_pthreads = --enable-async-io --with-pthreads \
-		--enable-storeio=ufs,aufs,diskd,null
+		--enable-storeio=ufs,aufs,coss,diskd,null
 	with_netfilter = --enable-linux-netfilter --enable-linux-proxy
 	with_arp_acl = --enable-arp-acl
 	with_epoll = --enable-epoll
@@ -83,7 +99,7 @@ endef
 
 
 # Build the binaries.
-build: patch wmerrors config.status
+build: patch config.status
 	$(checkdir)
 	$(MAKE) $(DEFAULTS) all
 	# Authentication modules
@@ -120,7 +136,6 @@ config.status:
 	$(with_netfilter) \
 	$(with_arp_acl) \
 	$(with_epoll) \
-	--enable-storeio="aufs,coss,diskd,null,ufs" \
 	--enable-removal-policies=lru,heap \
 	--enable-snmp \
 	--enable-delay-pools \
@@ -135,6 +150,7 @@ config.status:
 	--disable-icmp \
 	--with-large-files \
 	--with-maxfd=16384 \
+	--enable-stacktraces \
 	$(DEB_HOST_ARCH_CPU)-debian-$(DEB_HOST_ARCH_OS)
 ifeq ($(DEB_HOST_ARCH_OS), linux)
 endif
@@ -146,19 +162,18 @@ binary-indep:	build checkroot
 	#
 	#	Build squid-common package.
 	#
-	install -m 755 -g root -d $(tmp)/DEBIAN
-	install -m 755 -g root -d $(tmp)/usr/share/doc/squid-common
-	install -m 644 -g root ChangeLog $(tmp)/usr/share/doc/squid-common/changelog
-	install -m 644 -g root debian/changelog \
+	$(INSTALL_DIR) $(tmp)/DEBIAN
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/squid-common
+	$(INSTALL_FILE) ChangeLog $(tmp)/usr/share/doc/squid-common/changelog
+	$(INSTALL_FILE) debian/changelog \
 		$(tmp)/usr/share/doc/squid-common/changelog.Debian
 	gzip -9f $(tmp)/usr/share/doc/squid-common/*
-	install -m 644 -g root debian/copyright $(tmp)/usr/share/doc/squid-common
-	install -m 755 -g root -d $(tmp)/usr/share/$(package)
-	install -m 755 -g root -d $(tmp)/usr/share/squid/{errors,icons}
-	install -m 644 -g root src/mib.txt \
-		./$(tmp)$(datadir)/mib.txt
-	install -m 644 -g root src/mime.conf.default \
-		./$(tmp)$(datadir)/mime.conf
+	$(INSTALL_FILE) debian/copyright $(tmp)/usr/share/doc/squid-common
+	$(INSTALL_DIR) $(tmp)/usr/share/$(package)
+	$(INSTALL_DIR) $(tmp)/usr/share/squid/errors
+	$(INSTALL_DIR) $(tmp)/usr/share/squid/icons
+	$(INSTALL_FILE) src/mib.txt ./$(tmp)$(datadir)/mib.txt
+	$(INSTALL_FILE) src/mime.conf.default ./$(tmp)$(datadir)/mime.conf
 	#
 	cp -R errors/* ./$(tmp)$(datadir)/errors
 	rm -f ./$(tmp)$(datadir)/errors/Makefile*
@@ -166,36 +181,36 @@ binary-indep:	build checkroot
 	chmod 755 ./$(tmp)$(datadir)/errors/*
 	chmod 644 ./$(tmp)$(datadir)/errors/*/*
 	chown -R root:root ./$(tmp)$(datadir)/errors
-	install -m 644 -g root icons/*.gif ./$(tmp)$(datadir)/icons
-	install -m 755 -g root -d $(tmp)/usr/share/doc/$(package)
-	install -m 755 -g root -d $(tmp)/usr/share/doc/$(package)/examples
-	install -m 644 -g root debian/doc/README.auth_modules $(tmp)$(docdir)
-	install -m 644 -g root helpers/basic_auth/SMB/README \
+	$(INSTALL_FILE) icons/*.gif ./$(tmp)$(datadir)/icons
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/$(package)
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/$(package)/examples
+	$(INSTALL_FILE) debian/doc/README.auth_modules $(tmp)$(docdir)
+	$(INSTALL_FILE) helpers/basic_auth/SMB/README \
 		$(tmp)$(docdir)/README.auth_module.smb_auth
 	umask 022; head -19 helpers/basic_auth/NCSA/ncsa_auth.c > \
 		$(tmp)$(docdir)/README.auth_module.ncsa_auth
 	umask 022; head -56 helpers/basic_auth/PAM/pam_auth.c > \
 		$(tmp)$(docdir)/README.auth_module.pam_auth
-	install -m 644 -g root debian/README.ldap_auth \
+	$(INSTALL_FILE) debian/README.ldap_auth \
 		$(tmp)$(docdir)/README.auth_module.ldap_auth
-	install -m 644 -g root helpers/basic_auth/MSNT/README.html \
+	$(INSTALL_FILE) helpers/basic_auth/MSNT/README.html \
 		$(tmp)$(docdir)/README.auth_module.msnt_auth.html
 	umask 022; head -21 helpers/basic_auth/getpwnam/getpwnam_auth.c > \
 		$(tmp)$(docdir)/README.auth_module.getpwnam_auth
 	umask 022; head -26 helpers/digest_auth/password/digest_pw_auth.c > \
 		$(tmp)$(docdir)/README.auth_module.digest_pw_auth
-	install -m 644 -g root helpers/external_acl/ip_user/README \
+	$(INSTALL_FILE) helpers/external_acl/ip_user/README \
 		$(tmp)$(docdir)/README.auth_module.ip_user
-	install -m 644 -g root helpers/external_acl/ip_user/example.conf \
+	$(INSTALL_FILE) helpers/external_acl/ip_user/example.conf \
 		$(tmp)$(docdir)/examples/ip_user-example.conf
-	install -m 644 -g root helpers/external_acl/unix_group/README \
+	$(INSTALL_FILE) helpers/external_acl/unix_group/README \
 		$(tmp)$(docdir)/README.auth_module.unix_group
-	install -m 644 -g root CONTRIBUTORS QUICKSTART RELEASENOTES.html \
+	$(INSTALL_FILE) CONTRIBUTORS QUICKSTART RELEASENOTES.html \
 		README debian/doc/README.transparent-proxy \
 		debian/doc/README.morefds doc/debug-sections.txt \
 		$(tmp)/usr/share/doc/$(package)
 	gzip -9f `find debian/tmp/usr/share/doc/squid/* | grep -v examples`
-	install -m 644 -g root debian/doc/FAQ*.html $(tmp)/usr/share/doc/$(package)
+	$(INSTALL_FILE) debian/doc/FAQ*.html $(tmp)/usr/share/doc/$(package)
 	dpkg-gencontrol -isp -psquid-common
 	dpkg --build $(tmp) ..
 	rm -f debian/substvars
@@ -206,102 +221,93 @@ binary-arch:	build checkroot
 	#
 	#	Build squid package.
 	#
-	install -m 755 -g root -d $(tmp)/DEBIAN
-	install -m 755 -g root -d $(tmp)/etc/{squid,logrotate.d,init.d}
-	install -m 755 -g root -d $(tmp)/etc/resolvconf/update-libc.d
-	install -m 755 -g root -d $(tmp)/usr/{bin,sbin}
-	install -m 755 -g root -d $(tmp)/usr/share/doc/$(package)
-	install -m 755 -g root -d $(tmp)/usr/share/doc/$(package)/examples
-	install -m 755 -g root -d $(tmp)/usr/lib/squid
-	install -m 755 -g root -d $(tmp)/var/{log,spool}
+	$(INSTALL_DIR) $(tmp)/DEBIAN
+	$(INSTALL_DIR) $(tmp)/etc/squid
+	$(INSTALL_DIR) $(tmp)/etc/logrotate.d
+	$(INSTALL_DIR) $(tmp)/etc/init.d
+	$(INSTALL_DIR) $(tmp)/etc/resolvconf/update-libc.d
+	$(INSTALL_DIR) $(tmp)/usr/bin
+	$(INSTALL_DIR) $(tmp)/usr/sbin
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/$(package)
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/$(package)/examples
+	$(INSTALL_DIR) $(tmp)/usr/lib/squid
+	$(INSTALL_DIR) $(tmp)/var/{log,spool}
 	install -m 750 -o proxy -g proxy -d $(tmp)/var/log/squid
 	install -m 750 -o proxy -g proxy -d $(tmp)/var/spool/squid
-	install -m 755 -g root -d $(tmp)/usr/share/man/man8
+	$(INSTALL_DIR) $(tmp)/usr/share/man/man8
 	#
-	install -s -m 755 -g root src/squid $(tmp)/usr/sbin
-	install -s -m 755 -g root src/unlinkd src/fs/diskd-daemon \
-		$(tmp)/usr/lib/squid
-	#install -s -m 4754 -g proxy src/pinger $(tmp)/usr/lib/squid
-	#
-	install -m 644 -g root debian/logrotate \
-		$(tmp)/etc/logrotate.d/squid
-	# Added for resolvconf
-	install -m 755 -g root debian/squid.resolvconf \
-		$(tmp)/etc/resolvconf/update-libc.d/squid
-	# TO BE REMOVED (left in for people with an old /etc/init.d/squid)
-	install -m 755 -g root debian/squid.RunCache \
-		$(tmp)/$(libexecdir)/RunCache
-	#
-	install -m 755 -g root -s helpers/basic_auth/SMB/smb_auth $(tmp)$(libexecdir)
-	install -m 755 -g root helpers/basic_auth/SMB/smb_auth.sh \
-		$(tmp)$(libexecdir)
-	install -m 755 -g root -s helpers/basic_auth/NCSA/ncsa_auth \
-		$(tmp)$(libexecdir)
+	$(INSTALL_PROGRAM) src/squid $(tmp)/usr/sbin
+	$(INSTALL_PROGRAM) src/unlinkd src/fs/diskd-daemon $(tmp)/usr/lib/squid
+	$(INSTALL_FILE) debian/logrotate $(tmp)/etc/logrotate.d/squid
+	$(INSTALL_SCRIPT) debian/squid.resolvconf $(tmp)/etc/resolvconf/update-libc.d/squid
+	$(INSTALL_PROGRAM) helpers/basic_auth/SMB/smb_auth $(tmp)$(libexecdir)
+	$(INSTALL_SCRIPT) helpers/basic_auth/SMB/smb_auth.sh $(tmp)$(libexecdir)
+	$(INSTALL_PROGRAM) helpers/basic_auth/NCSA/ncsa_auth $(tmp)$(libexecdir)
 	install -m 2750 -o proxy -g shadow -s helpers/basic_auth/PAM/pam_auth \
 		$(tmp)$(libexecdir)
-	install -m 755 -g root -s helpers/basic_auth/LDAP/squid_ldap_auth \
+	$(INSTALL_PROGRAM) helpers/basic_auth/LDAP/squid_ldap_auth \
 		$(tmp)$(libexecdir)/ldap_auth
-	install -m 755 -g root -s helpers/basic_auth/YP/yp_auth \
+	$(INSTALL_PROGRAM) helpers/basic_auth/YP/yp_auth \
 		$(tmp)$(libexecdir)/yp_auth
-	install -m 755 -g root -s helpers/basic_auth/MSNT/msnt_auth \
+	$(INSTALL_PROGRAM) helpers/basic_auth/MSNT/msnt_auth \
 		$(tmp)$(libexecdir)/msnt_auth
 	install -m 2750 -o proxy -g shadow -s \
 		helpers/basic_auth/getpwnam/getpwname_auth \
 		$(tmp)$(libexecdir)/getpwnam_auth
-	install -m 755 -g root -s helpers/digest_auth/password/digest_pw_auth \
+	$(INSTALL_PROGRAM) helpers/digest_auth/password/digest_pw_auth \
 		$(tmp)$(libexecdir)/digest_pw_auth
-	install -m 755 -g root -s helpers/external_acl/ip_user/ip_user_check \
+	$(INSTALL_PROGRAM) helpers/external_acl/ip_user/ip_user_check \
 		$(tmp)$(libexecdir)/ip_user_check
-	install -m 755 -g root -s helpers/external_acl/ldap_group/squid_ldap_group \
+	$(INSTALL_PROGRAM) helpers/external_acl/ldap_group/squid_ldap_group \
 		$(tmp)$(libexecdir)/squid_ldap_group
-	install -m 644 helpers/external_acl/ldap_group/squid_ldap_group.8 \
+	$(INSTALL_FILE) helpers/external_acl/ldap_group/squid_ldap_group.8 \
 		$(tmp)/usr/share/man/man8/squid_ldap_group.8
-	install -m 755 -g root -s helpers/external_acl/session/squid_session \
+	$(INSTALL_PROGRAM) helpers/external_acl/session/squid_session \
 		$(tmp)$(libexecdir)/squid_session
-	install -m 644 helpers/external_acl/session/squid_session.8 \
+	$(INSTALL_FILE) helpers/external_acl/session/squid_session.8 \
 		$(tmp)/usr/share/man/man8/squid_session.8
-	install -m 755 -g root -s helpers/external_acl/unix_group/squid_unix_group \
+	$(INSTALL_PROGRAM) helpers/external_acl/unix_group/squid_unix_group \
 		$(tmp)$(libexecdir)/squid_unix_group
-	install -m 644 helpers/external_acl/unix_group/squid_unix_group.8 \
+	$(INSTALL_FILE) helpers/external_acl/unix_group/squid_unix_group.8 \
 		$(tmp)/usr/share/man/man8/squid_unix_group.8
-	install -m 755 -g root helpers/external_acl/wbinfo_group/wbinfo_group.pl \
+	$(INSTALL_SCRIPT) helpers/external_acl/wbinfo_group/wbinfo_group.pl \
 		$(tmp)$(libexecdir)/wbinfo_group.pl
-	install -m 755 -g root -s helpers/ntlm_auth/SMB/ntlm_auth \
+	$(INSTALL_PROGRAM) helpers/ntlm_auth/SMB/ntlm_auth \
 		$(tmp)$(libexecdir)/ntlm_auth
 	# the examples. Most have been removed from upstream :/
-	install -m 644 -g root src/squid.conf.default \
+	$(INSTALL_FILE) src/squid.conf.default \
 	        $(tmp)/usr/share/doc/$(package)/examples/squid.conf
-	install -m 644 -g root debian/default.squid \
+	$(INSTALL_FILE) debian/default.squid \
 		$(tmp)/usr/share/doc/$(package)/examples
 	
 	#
-	install -m 644 -g root ChangeLog $(tmp)/usr/share/doc/$(package)/changelog
-	install -m 644 -g root debian/changelog \
+	$(INSTALL_FILE) ChangeLog $(tmp)/usr/share/doc/$(package)/changelog
+	$(INSTALL_FILE) debian/changelog \
 		$(tmp)/usr/share/doc/$(package)/changelog.Debian
-	install -m 644 -g root debian/README.Debian \
+	$(INSTALL_FILE) debian/README.Debian \
 		$(tmp)/usr/share/doc/$(package)/README.Debian
-	install -m 644 -g root debian/NEWS.Debian \
+	$(INSTALL_FILE) debian/NEWS.Debian \
 		$(tmp)/usr/share/doc/$(package)/README.Debian
 	gzip -9f `find debian/tmp/usr/share/doc/squid/* | grep -v examples`
-	#$(tmp)/usr/share/doc/$(package)/[A-Za-df-z]*
-	install -m 644 -g root debian/copyright $(tmp)/usr/share/doc/$(package)
-	install -m 644 doc/squid.8 $(tmp)/usr/share/man/man8
+	$(INSTALL_FILE) debian/copyright $(tmp)/usr/share/doc/$(package)
+	$(INSTALL_FILE) doc/squid.8 $(tmp)/usr/share/man/man8
 	gzip -9f $(tmp)/usr/share/man/man?/*
-	install -m 755 debian/squid.rc $(tmp)/etc/init.d/squid
+	$(INSTALL_SCRIPT) debian/squid.rc $(tmp)/etc/init.d/squid
 	#
-	install -m 755 debian/preinst $(tmp)/DEBIAN/preinst
-	install -m 755 debian/postinst $(tmp)/DEBIAN/postinst
-	install -m 755 debian/prerm $(tmp)/DEBIAN/prerm
-	install -m 755 debian/postrm $(tmp)/DEBIAN/postrm
-	install -m 644 debian/conffiles $(tmp)/DEBIAN/conffiles
-	#install -m 644 debian/templates $(tmp)/DEBIAN/templates
+	$(INSTALL_SCRIPT) debian/preinst $(tmp)/DEBIAN/preinst
+	$(INSTALL_SCRIPT) debian/postinst $(tmp)/DEBIAN/postinst
+	$(INSTALL_SCRIPT) debian/prerm $(tmp)/DEBIAN/prerm
+	$(INSTALL_SCRIPT) debian/postrm $(tmp)/DEBIAN/postrm
+	$(INSTALL_FILE) debian/conffiles $(tmp)/DEBIAN/conffiles
+	#$(INSTALL_FILE) debian/templates $(tmp)/DEBIAN/templates
 	po2debconf debian/templates > debian/templates.merged
-	install -m 644 debian/templates.merged $(tmp)/DEBIAN/templates
-	install -m 755 debian/config $(tmp)/DEBIAN/config
+	$(INSTALL_FILE) debian/templates.merged $(tmp)/DEBIAN/templates
+	$(INSTALL_SCRIPT) debian/config $(tmp)/DEBIAN/config
 
 	# overrides file
-	install -m 755 -g root -d $(tmp)/usr/share/lintian/overrides/
-	install -m 644 debian/squid.overrides $(tmp)/usr/share/lintian/overrides/squid
+	$(INSTALL_DIR) $(tmp)/usr/share/lintian/overrides/
+	$(INSTALL_FILE) debian/squid.overrides \
+		$(tmp)/usr/share/lintian/overrides/squid
 	
 	dpkg-shlibdeps $(tmp)/usr/sbin/* $(tmp)$(libexecdir)/*
 	dpkg-gencontrol -isp -p$(package)
@@ -311,22 +317,22 @@ binary-arch:	build checkroot
 	#
 	#	Generate squidclient package.
 	#
-	install -m 755 -g root -d $(tmp)/DEBIAN
-	install -m 755 -g root -d $(tmp)/usr/bin
-	install -m 755 -g root -d $(tmp)/usr/share/doc/squidclient
-	install -m 755 -g root -d $(tmp)/usr/share/man/man1
+	$(INSTALL_DIR) $(tmp)/DEBIAN
+	$(INSTALL_DIR) $(tmp)/usr/bin
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/squidclient
+	$(INSTALL_DIR) $(tmp)/usr/share/man/man1
 	#
-	install -s -m 755 -g root tools/squidclient $(tmp)/usr/bin/squidclient
-	install -m 644 -g root debian/squidclient.1 $(tmp)/usr/share/man/man1
-	install -m 644 -g root ChangeLog $(tmp)/usr/share/doc/squidclient/changelog
-	install -m 644 -g root debian/changelog \
+	$(INSTALL_PROGRAM) tools/squidclient $(tmp)/usr/bin/squidclient
+	$(INSTALL_FILE) debian/squidclient.1 $(tmp)/usr/share/man/man1
+	$(INSTALL_FILE) ChangeLog $(tmp)/usr/share/doc/squidclient/changelog
+	$(INSTALL_FILE) debian/changelog \
 		$(tmp)/usr/share/doc/squidclient/changelog.Debian
 	gzip -9f $(tmp)/usr/share/doc/squidclient/*
-	install -m 644 -g root debian/copyright $(tmp)/usr/share/doc/squidclient
+	$(INSTALL_FILE) debian/copyright $(tmp)/usr/share/doc/squidclient
 	gzip -9f $(tmp)/usr/share/man/man?/*
 	#
-	install -m 755  debian/postinst.squidclient $(tmp)/DEBIAN/prerm
-	install -m 755  debian/prerm.squidclient $(tmp)/DEBIAN/prerm
+	$(INSTALL_SCRIPT)  debian/postinst.squidclient $(tmp)/DEBIAN/postinst
+	$(INSTALL_SCRIPT)  debian/prerm.squidclient $(tmp)/DEBIAN/prerm
 	dpkg-shlibdeps tools/squidclient
 	dpkg-gencontrol -isp -psquidclient
 	dpkg --build $(tmp) ..
@@ -335,35 +341,34 @@ binary-arch:	build checkroot
 	#
 	#	Generate squid-cgi package.
 	#
-	install -m 755 -g root -d $(tmp)/DEBIAN
-	install -m 755 -g root -d $(tmp)/etc/squid
-	install -m 755 -g root -d $(tmp)/usr/lib/cgi-bin
-	install -m 755 -g root -d $(tmp)/usr/share/doc/squid-cgi
-	install -m 755 -g root -d $(tmp)/usr/share/man/man8
+	$(INSTALL_DIR) $(tmp)/DEBIAN
+	$(INSTALL_DIR) $(tmp)/etc/squid
+	$(INSTALL_DIR) $(tmp)/usr/lib/cgi-bin
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/squid-cgi
+	$(INSTALL_DIR) $(tmp)/usr/share/man/man8
 	#
-	install -m 644 tools/cachemgr.conf $(tmp)/etc/squid/cachemgr.conf
-	install -s -m 755 -g root tools/cachemgr.cgi $(tmp)/usr/lib/cgi-bin/
-	install -m 644 -g root debian/squid-cgi.8 $(tmp)/usr/share/man/man8
-	install -m 644 -g root ChangeLog $(tmp)/usr/share/doc/squid-cgi/changelog
-	install -m 644 -g root debian/changelog \
+	$(INSTALL_FILE) tools/cachemgr.conf $(tmp)/etc/squid/cachemgr.conf
+	$(INSTALL_PROGRAM) tools/cachemgr.cgi $(tmp)/usr/lib/cgi-bin/
+	$(INSTALL_FILE) debian/squid-cgi.8 $(tmp)/usr/share/man/man8
+	$(INSTALL_FILE) ChangeLog $(tmp)/usr/share/doc/squid-cgi/changelog
+	$(INSTALL_FILE) debian/changelog \
 		$(tmp)/usr/share/doc/squid-cgi/changelog.Debian
-	install -m 644 -g root debian/doc/cachemgr.README \
+	$(INSTALL_FILE) debian/doc/cachemgr.README \
 		$(tmp)/usr/share/doc/squid-cgi/README.cachemgr
 	gzip -9f $(tmp)/usr/share/doc/squid-cgi/*
-	install -m 644 -g root debian/copyright $(tmp)/usr/share/doc/squid-cgi
-	install -m 644 -g root debian/doc/cachemgrfaq.html \
+	$(INSTALL_FILE) debian/copyright $(tmp)/usr/share/doc/squid-cgi
+	$(INSTALL_FILE) debian/doc/cachemgrfaq.html \
 		$(tmp)/usr/share/doc/squid-cgi
 	gzip -9f $(tmp)/usr/share/man/man8/*
-	install -m 755 -g root -d $(tmp)/usr/share/doc/squid-cgi/examples
-	install -m 644 -g root debian/doc/cachemgr.html \
+	$(INSTALL_DIR) $(tmp)/usr/share/doc/squid-cgi/examples
+	$(INSTALL_FILE) debian/doc/cachemgr.html \
 		$(tmp)/usr/share/doc/squid-cgi/examples
 	#
-	install -m 755 debian/postinst.squid-cgi $(tmp)/DEBIAN/postinst
-	install -m 755 debian/postrm.squid-cgi $(tmp)/DEBIAN/postrm
-	install -m 755 debian/prerm.squid-cgi $(tmp)/DEBIAN/prerm
-	#install -m 644 debian/templates $(tmp)/DEBIAN/templates
-	install -m 644 debian/conffiles.squid-cgi $(tmp)/DEBIAN/conffiles
-	install -m 644 debian/templates.merged $(tmp)/DEBIAN/templates
+	$(INSTALL_SCRIPT) debian/postinst.squid-cgi $(tmp)/DEBIAN/postinst
+	$(INSTALL_SCRIPT) debian/postrm.squid-cgi $(tmp)/DEBIAN/postrm
+	$(INSTALL_SCRIPT) debian/prerm.squid-cgi $(tmp)/DEBIAN/prerm
+	$(INSTALL_FILE) debian/conffiles.squid-cgi $(tmp)/DEBIAN/conffiles
+	$(INSTALL_FILE) debian/templates.merged $(tmp)/DEBIAN/templates
 	dpkg-shlibdeps tools/cachemgr.cgi
 	dpkg-gencontrol -isp -psquid-cgi
 	dpkg --build $(tmp) ..
