--- a/willow/mk/vars.mk.in
+++ b/willow/mk/vars.mk.in
@@ -12,14 +12,17 @@ _LEX=		@LEX@
 _YACC=		@YACC@
 
 CC=		@CC@
+CXX=		@CXX@
 _CPPFLAGS=	@CPPFLAGS@
 _CFLAGS=	@CFLAGS@
+_CXXFLAGS=	@CXXFLAGS@
 _LDFLAGS=	@LDFLAGS@ @LIBS@
 
 SRCROOT=	@abs_top_srcdir@
 
-_LINK=		$(CC) $(_CFLAGS) $(CFLAGS) $(_LDFLAGS) $(OBJS) $(LDFLAGS) 
+_LINK=		$(CXX) $(_CFLAGS) $(CFLAGS) $(_LDFLAGS) $(_ALLOBJS) $(LDFLAGS) 
 _COMPILE=	$(CC) $(_CPPFLAGS) $(CPPFLAGS) $(_CFLAGS) $(CFLAGS)
+_COMPILEXX=	$(CXX) $(_CPPFLAGS) $(CPPFLAGS) $(_CXXFLAGS) $(CXXFLAGS)
 _RMF=		rm -f
 _AR=		ar
 _RANLIB=	ranlib
