--- a/willow/src/wlogwriter/Makefile.in
+++ b/willow/src/wlogwriter/Makefile.in
@@ -1,8 +1,12 @@
 PROGRAM = wlogwriter
 
-SRCS = wlogwriter.c
-BINDIR=@libexecdir@
+SRCS		= wlogwriter.cc
+OBJS		= wlogwriter.o
+BINDIR		= @libexecdir@
+CPPFLAGS	= -I../include
 
-EXTRA_DIST=Makefile.in
+EXTRA_DIST	= Makefile.in
+
+default: all
 
 @include@ @q@@top_srcdir@/mk/prog.mk@q@
