use _CXXFLAGS instead of _CFLAGS
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17092 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/mk/vars.mk.in
+++ b/willow/mk/vars.mk.in
@@ -20,7 +20,7 @@ _LDFLAGS=	@LDFLAGS@ @LIBS@
 
 SRCROOT=	@abs_top_srcdir@
 
-_LINK=		$(CXX) $(_CFLAGS) $(CFLAGS) $(_LDFLAGS) $(_ALLOBJS) $(LDFLAGS) 
+_LINK=		$(CXX) $(_CXXFLAGS) $(CXXFLAGS) $(_LDFLAGS) $(_ALLOBJS) $(LDFLAGS) 
 _COMPILE=	$(CC) $(_CPPFLAGS) $(CPPFLAGS) $(_CFLAGS) $(CFLAGS)
 _COMPILEXX=	$(CXX) $(_CPPFLAGS) $(CPPFLAGS) $(_CXXFLAGS) $(CXXFLAGS)
 _RMF=		rm -f
