split header processing into its own file store qvalues as set<> instead of tailq
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17123 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/willow/Makefile.in
+++ b/willow/src/willow/Makefile.in
@@ -12,8 +12,11 @@ BASESRCS =	 		\
 	confparse.cc		\
 	wnet.cc			\
 	wnet_libevent.cc	\
-	wlog.cc
-OBJS=	willow.o wconfig.o whttp.o wbackend.o whttp_entity.o wcache.o confparse.o wnet.o wlog.o wnet_libevent.o
+	wlog.cc			\
+	whttp_header.cc
+
+OBJS=	$(BASESRCS:.cc=.o)
+
 SRCS=$(BASESRCS)
 OBJADD = @LIBOBJS@ y.tab.o lex.yy.o
 
