simple ACL implementation -s options for wreadlog, to specify valid source addresses
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17167 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/wreadlog/Makefile.in
+++ b/willow/src/wreadlog/Makefile.in
@@ -1,9 +1,10 @@
 # $Id$
-PROGRAM = wreadlog
-BINDIR = @bindir@
-
+PROGRAM		= wreadlog
+BINDIR		= @bindir@
+CPPFLAGS	= -I../include
 BASESRCS =	 		\
-	wreadlog.cc
+	wreadlog.cc		\
+	acl.cc
 
 OBJS=	$(BASESRCS:.cc=.o)
 
