--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -6,8 +6,9 @@
  */
 
 /*
- * Any number of backends can be defined.
- * IPv4 IPs only, not hostnames.
+ * Any number of backends can be defined.  The name can be an IP
+ * address or a hostname.  For hostnames, all addresses associated
+ * with the interface will be added.
  */
 backend "127.0.0.1" {
 	/*
@@ -18,7 +19,8 @@ backend "127.0.0.1" {
 };
 
 /*
- * Any number of listeners can be defined.
+ * Any number of listeners can be defined.  Hostnames are allowed,
+ * the same as backend{}.
  */
 listen "127.0.0.1" {
 	port = 8080;
