simple, fast trie-based access control based on client IP address
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17185 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/src/willow/Makefile.in
+++ b/willow/src/willow/Makefile.in
@@ -13,7 +13,8 @@ BASESRCS =	 		\
 	wnet.cc			\
 	wnet_libevent.cc	\
 	wlog.cc			\
-	whttp_header.cc
+	whttp_header.cc		\
+	radix.cc
 
 OBJS=	$(BASESRCS:.cc=.o)
 
