--- a/willow/errors/Makefile.in
+++ b/willow/errors/Makefile.in
@@ -7,6 +7,7 @@ DATAFILES=\
 	ERR_BADREQUEST	\
 	ERR_BADRESPONSE	\
 	ERR_CACHE_IO	\
-	ERR_GENERAL
+	ERR_GENERAL	\
+	ERR_BLOCKED
 
 @include@ @q@@top_srcdir@/mk/data.mk@q@
