--- a/willow/mk/subdir.mk.in
+++ b/willow/mk/subdir.mk.in
@@ -12,7 +12,7 @@ default: all
 all install lint clean depend _extradist:
 	@for dir in $(SUBDIRS); do \
 		echo "$@ ==> $(_DISTPATH)$$dir" ;\
-		cd $$dir && $(MAKE) `echo $@ | sed -e s/_extradist/_dist/` _DISTPATH="$(_DISTPATH)$$dir/" || exit 1 ;\
+		cd $$dir && $(MAKE) @M_FLAGS@ `echo $@ | sed -e s/_extradist/_dist/` _DISTPATH="$(_DISTPATH)$$dir/" || exit 1 ;\
 		echo "$@ <== $(_DISTPATH)$$dir" ;\
 		cd .. ;\
 	done
