udp stats should have enable/disable switch and sane default values
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17209 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -188,11 +188,13 @@ access-v6 {
  * The server collects runtime statistics for use by the 'wgetstats' program.
  */
 stats {
-	/* How often to re-calculate averages */
+	enable = yes;
+
+	/* How often to re-calculate averages (default: 300) */
 	interval = 30;
 
-	/* Default port is 4445 */
-	port = 4445;
+	/* Default port is 4446 */
+	port = 4446;
 
 	/*
 	 * Only allow stats requests from certain networks.  If you specify
