parser logic for itemlist,single was ditching $1 should be possible to specify multiple listen addresses for stats should have general confparse support for IP address lists
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17213 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -190,11 +190,12 @@ access-v6 {
 stats {
 	enable = yes;
 
+	/* Addresses to listen on */
+	listen = "127.0.0.1";	/* port defaults to 4446 */;
+	listen = "[::1]:4447";
+
 	/* How often to re-calculate averages (default: 300) */
 	interval = 30;
-
-	/* Default port is 4446 */
-	port = 4446;
 
 	/*
 	 * Only allow stats requests from certain networks.  If you specify
