MSIE cannot handle chunked encoding properly; force HTTP 1.0 fallback if msie-http11-hack = yes
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17227 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/willow.conf.example
+++ b/willow/willow.conf.example
@@ -81,6 +81,13 @@ cache {
 	 * one, at the expense of a small bit of performance).
 	 */
 	use-carp = yes;
+
+	/*
+	 * Certain versions of MSIE cannot properly handle HTTP/1.1 chunked
+	 * encoding, and will crash when sent a chunked reply.  Enable this
+	 * to detect MSIE and force fallback to HTTP 1.0.
+	 *
+	msie-http11-hack = yes;
 };
 
 /*
