* Add yf1010-yf1017 to the list of squids * Move some non-cluster specific stuff to common.cfg * Disable suite preseeding, to test Edgy
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17261 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/yaseo.cfg
+++ b/ubuntu/autoinstall/yaseo.cfg
@@ -15,18 +15,12 @@ d-i	netcfg/get_domain	string	unassigned-domain
 d-i	netcfg/wireless_wep	string 
 
 ### Mirror settings
-d-i	mirror/country	select	NL
+d-i	mirror/country	select	KR
 d-i	mirror/http/mirror	select	kr.archive.ubuntu.com
 d-i	mirror/http/directory	string	/ubuntu/
 d-i	mirror/http/proxy	string
 
-# Suite to install.
-d-i	mirror/suite	select	dapper
-
 d-i	apt-setup/security_host	string	security.ubuntu.com
-
-# Use software from the "universe" component?
-d-i	apt-setup/universe	boolean true
 
 # ssmtp settings
 ssmtp   ssmtp/mailhub           string  amaryllis.yaseo.wikimedia.org
