--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -17,6 +17,12 @@ d-i	prebaseconfig/reboot_in_progress	note
 d-i	pkgsel/language-pack-patterns	string
 d-i	pkgsel/install-language-support	bool	false
 
+# Suite to install.
+#d-i     mirror/suite    select  dapper
+
+# Use software from the "universe" component?
+d-i     apt-setup/universe      boolean true
+
 # Wikimedia's APT repository
 d-i	apt-setup/local0/comment	string	Wikimedia APT repository
 d-i	apt-setup/local0/repository	string	http://apt.wikimedia.org/wikimedia dapper-wikimedia main restricted universe multiverse
