* Try to suppres the tasksel dialog * Try the implementation specific hack for automatically wiping the disk
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17262 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -20,6 +20,9 @@ d-i	pkgsel/install-language-support	bool	false
 # Suite to install.
 #d-i     mirror/suite    select  dapper
 
+# Tasksel - do not install anything
+d-i	tasksel/first	multiselect
+
 # Use software from the "universe" component?
 d-i     apt-setup/universe      boolean true
 
