Move late_command to a separate script file
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17269 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/common.cfg
+++ b/ubuntu/autoinstall/common.cfg
@@ -39,4 +39,4 @@ d-i     preseed/include_command string  echo $(uname -m).cfg
 d-i	preseed/early_command	string	echo d-i netcfg/get_ipaddress string $(ifconfig | grep "inet addr" | cut -d ' ' -f 12 | sed 's/addr://' | grep -v 127\.0\.0\.1) > /tmp/static_net.cfg && debconf-set-selections /tmp/static_net.cfg && killall.sh; netcfg; true
 
 # Individual additional packages to install
-d-i	preseed/late_command	string	apt-install wikimedia-base openssh-server; mkdir /target/root/.ssh && wget -O /target/root/.ssh/authorized_keys http://apt.wikimedia.org/autoinstall/ssh/authorized_keys && chmod go-rwx /target/root/.ssh/authorized_keys; rm -f /usr/lib/prebaseconfig.d/90console && sed -i -e "s/^#T0:/T0:/" /target/etc/inittab; chroot /target /bin/sh -c 'echo -e \\n$(cat /etc/issue.net) auto-installed on $(date). > /etc/motd'
+d-i	preseed/late_command	string	wget -O /tmp/late_command http://apt.wikimedia.org/autoinstall/scripts/late_command && sh /tmp/late_command
