Try a specific string for init_automatically_partition
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17283 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ubuntu/autoinstall/squid.cfg
+++ b/ubuntu/autoinstall/squid.cfg
@@ -1,10 +1,9 @@
 # Squid specific configuration
-#d-i	partman-auto/automatically_partition	select	Use the largest continuous free space
 
 # Implementation specific hack:
-d-i	partman-auto/init_automatically_partition	select	20some_device__________/var/lib/partman/devices/=dev=discs=disc0=disc
+#d-i	partman-auto/init_automatically_partition	select	20some_device__________/var/lib/partman/devices/=dev=discs=disc0=disc
 # ...instead of this:
-#d-i	partman-auto/automatically_partition	select	Erase entire disk: SCSI1 (0,0,0) (sda) - 73.4 GB SEAGATE ST373307LC
+d-i	partman-auto/init_automatically_partition	select	Erase entire disk: SCSI1 (0,0,0) (sda) - 73.4 GB SEAGATE ST373307LC
 
 d-i	partman-auto/disk	string	/dev/discs/disc0/disc
 
