--- a/ubuntu/autoinstall/squid.cfg
+++ b/ubuntu/autoinstall/squid.cfg
@@ -1,11 +1,11 @@
 # Squid specific configuration
 
 # Implementation specific hack:
-d-i	partman-auto/init_automatically_partition	select	20some_device__________/var/lib/partman/devices/=dev=discs=disc0=disc
+d-i	partman-auto/init_automatically_partition	select	20some_device__________/var/lib/partman/devices/=dev=sda
 # ...instead of this:
 #d-i	partman-auto/init_automatically_partition	select	Erase entire disk: SCSI1 (0,0,0) (sda) - 73.4 GB SEAGATE ST373307LC
 
-d-i	partman-auto/disk	string	/dev/discs/disc0/disc
+d-i	partman-auto/disk	string	/dev/sda
 
 d-i	partman/choose_partition	select Finish partitioning and write changes to disk
 d-i	partman/confirm	boolean	true
