new "flowio" I/O system based on spigots (which produce data), sinks (which accept them) and filters (which transform data from a spigot and feed it to a sink or another filter).  rewrite core HTTP code to use new i/o system; should be significantly more robust (but probably still contains a few bugs, and is missing quite a few features).
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17391 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/willow/mk/rules.mk.in
+++ b/willow/mk/rules.mk.in
@@ -4,6 +4,8 @@
 
 @include@ @q@@abs_top_srcdir@/mk/vars.mk@q@
 
+.PHONY: all clean install depend distclean dist _dist
+
 .c.o:
 	@echo "	$(_COMPILE) -c $<"
 	@$(_COMPILE) -c $<
