squid (2.6.5-1wm1) edgy; urgency=medium
  * New upstream version 2.6.STABLE5
  * Include patch fixing http://www.squid-cache.org/bugs/show_bug.cgi?id=1817
  * Include a 'clean' initscript option that cleans all COSS dirs with nulls
  * Fix error message in initscript when no COSS cache dirs are defined



git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@17400 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/debs/squid/debian/squid.rc
+++ b/debs/squid/debian/squid.rc
@@ -65,7 +65,23 @@ prepare_coss() {
 	COSS_FILES=`sed -e 's/#.*//g' /etc/squid/squid.conf | \
 	        egrep "cache_dir[[:space:]]+coss" | awk '{ print $3 }'`
 	gid=`grepconf cache_effective_group proxy`
-	chgrp $gid $COSS_FILES
+	[ -n "$COSS_FILES" ] && chgrp $gid $COSS_FILES
+}
+
+clean_coss() {
+	COSS_FILES=`sed -e 's/#.*//g' /etc/squid/squid.conf | \
+	        egrep "cache_dir[[:space:]]+coss" | awk '{ print $3 }'`
+	for cossfile in $COSS_FILES
+	do
+		log_action_msg "Cleaning COSS file $cossfile..."
+		cosssize=`sed -e 's/#.*//g' /etc/squid/squid.conf | \
+                	egrep "cache_dir[[:space:]]+coss[[:space:]]+$cossfile" | awk '{ print $4 }'`
+		if [ -w $cossfile -a -n "$cosssize" -a $cosssize -gt 0 ]
+		then
+			gid=`grepconf cache_effective_group proxy`
+			su $gid dd if=/dev/zero bs=1048576 count=$cosssize of=$cossfile || exit 1
+		fi
+	done
 }
 
 start () {
@@ -167,8 +183,12 @@ case "$1" in
 		log_end_msg $?
 	fi
 	;;
+    clean)
+	log_action_msg "Cleaning cache directories"
+	clean_coss
+	;;
     *)
-	echo "Usage: /etc/init.d/$NAME {start|stop|reload|force-reload|restart}"
+	echo "Usage: /etc/init.d/$NAME {start|stop|reload|force-reload|restart|clean}"
 	exit 3
 	;;
 esac
